basic prisma backend setup

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,18 +2,23 @@
   "name": "backend",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "bun run --watch index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "prisma": "^5.21.1"
+    "prisma": "^5.22.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "cors": "^2.8.5",
+    "elysia": "^1.1.24",
     "express": "^4.21.1"
   }
 }
