--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,14 +1,15 @@
 services:
   db:
-    image: postgres
-    restart: always
+    image: ankane/pgvector:latest
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_DB: ragbackend
     ports:
-      - '5555:5432'
+      - "15432:5432"
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+
 volumes:
-  db-data:
+  postgres_data:
+
