✨ Feat: Add vector db and regular postgres db

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,15 +1,27 @@
 services:
-  db:
+  postgres-db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    ports:
+      - '5555:5432'  # Maps to 5555 on the host
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+  pgvector-db:
     image: ankane/pgvector:latest
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: ragbackend
     ports:
-      - "15432:5432"
+      - '15432:5432'  # Maps to 15432 on the host
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
 volumes:
+  db-data:
   postgres_data:
-
