✨ Add basic index.ts express backend

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -29,3 +29,8 @@ volumes:
 # Commands to test the db
 # psql -h localhost -p 5555 -U postgres -d postgres
 # psql -h localhost -p 15432 -U postgres -d ragbackend
+
+# OR 
+
+# psql postgresql://postgres:postgres@localhost:5555/mydb
+# psql postgresql://postgres:postgres@localhost:15432/ragbackend
