--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.22.0",
     "cors": "^2.8.5",
     "elysia": "^1.1.24",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "zod": "^3.23.8"
   }
 }
